# AllPractise

./: .replit  PythonPandas.py  PythonPrograms.py  README.md  github_practise_questions.py  int_questions.py  main.py  pyproject.toml
AWS/: aws_service.py  get_index.html  lambda_function.py
Bank_Account/: bank_main.py
ExpenseTrackerApplicaton/: app.py
Phone_Items/: Item.py  Phone.py
Student_Management/: studentManagement.py
sql_practise/: MySqlPractise.txt  TechBeamers.txt
